<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sesion2</string>
    <string name="action_settings">Settings</string>
    <string name="usuario">Usuario: </string>
    <string name="desc">Imagen </string>
    <string name="eusuario">Introduce nombre</string>
    <string name="jugar">Jugar</string>
    <string name="acercade">Acerca de..</string>
    <string name="saludo">saludo de</string>
    <string name="app_name2">Sesion2-Perfect</string>

</resources>
