<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#ffefac"
    android:orientation="vertical" >


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginLeft="50dp"
        android:background="#ffefac">
 
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/imageView"
            android:src="@drawable/foto1"
            android:background="#ffefac" 
            android:contentDescription="@string/desc" />        	
    </LinearLayout>
 
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
 
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:textStyle="bold" 
        android:textSize="20sp" />
        
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/eusuario"
            android:ems="10"
            android:id="@+id/editText"
            android:labelFor="@id/editText"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:singleLine="false"
            android:background="#ffffff" />
 
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jugar"
            android:id="@+id/bjugar"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp" />
 
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acercade"
            android:id="@+id/bacercade"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp" />
    </LinearLayout>

</LinearLayout>
